# autoppia_miner

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  task_results.json
agent/: __init__.py  actions.py  cache.py  classifier.py  loop.py  prompts.py  state.py
llm/: __init__.py  client.py  parser.py
models/: __init__.py  actions.py  request.py  response.py  selectors.py
parsing/: __init__.py  candidates.py  filtering.py  labels.py  page_ir.py  pruning.py  selectors.py
