[project]
name = "autoppia-miner"
version = "0.1.0"
description = "Bittensor Subnet 36 (Autoppia) web automation agent miner"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.110.3",
    "uvicorn[standard]==0.37.0",
    "pydantic==2.12.5",
    "orjson==3.11.7",
    "beautifulsoup4==4.12.3",
    "lxml==6.0.2",
    "httpx==0.28.1",
    "tenacity==9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require Docker)",
    "requires_docker: Tests that need Docker daemon running",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["models", "parsing", "llm", "agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
